# platform

./: CMakeLists.txt  README.md
include/platform/: exception.hpp  scope.hpp  singleton.hpp  spin_lock.hpp  type_traits.hpp  utilities.hpp
include/platform/container/: type_map.hpp
include/platform/containers/: type_map.hpp
include/platform/utilities/configuration/: configuration.hpp  exception.hpp  reader.hpp  single_configuration.hpp  single_storage.hpp  storage.hpp
include/platform/utilities/filesystem/: file.hpp
include/platform/utilities/log/: exception.hpp  log.hpp  single_log.hpp
source/: scope.cpp  spin_lock.cpp
source/utilities/configuration/: configuration.cpp  single_configuration.cpp  single_storage.cpp  storage.cpp
source/utilities/log/: log.cpp  single_log.cpp
